spekt8/spekt8-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spekt8
  labels:
    app: spekt8
spec:
  selector:
    matchLabels:
      component: spekt8
  replicas: 1
  template:
    metadata:
      labels:
        component: spekt8
    spec:
      containers:
        - name: spekt8
          image: elliotxkim/spekt8
          ports:
            - containerPort: 3000
---
kind: Service
apiVersion: v1
metadata:
  name: spekt8
spec:
  selector:
    app: spekt8
  ports:
  - name: '3000'
    port: 3000
    targetPort: 3000
