spekt8/ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spekt8
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # nginx.org/websocket-services: "jupyter-notebook-test"
    # nginx.ingress.kubernetes.io/upstream-hash-by: "$arg_token"
    # nginx.ingress.kubernetes.io/proxy-read-timeout: 3600
    # nginx.ingress.kubernetes.io/proxy-send-timeout: 3600
    # nginx.ingress.kubernetes.io/configuration-snippet: |
      # proxy_set_header Upgrade $http_upgrade;
      # proxy_set_header Connection $connection_upgrade;
spec:
  rules:
  - host: k8smon.sudojoss.com
    http:
      paths:
        - path: /
          backend:
            serviceName: spekt8
            servicePort: 3000
  tls: 
  - secretName: sudojoss-tls
    hosts:
    - jup.sudojoss.com
